--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="https://alexjcobb.github.io/">Alex Cobb</a>
+<a href="https://alexjcobb.github.io/Alex Cobb.md">Alex Cobb</a>
 </body>
 </html>
